--- a/app/src/main/res/layout/layout_work_blurb_compact.xml
+++ b/app/src/main/res/layout/layout_work_blurb_compact.xml
@@ -37,6 +37,7 @@
 
     <TextView
         android:id="@+id/workTitle"
+        style="@style/ui_text_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -67,7 +68,6 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text="There was an error retrieving this work from AO3."
-        android:textColor="#555555"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="@+id/workAuthors"
         app:layout_constraintStart_toStartOf="@id/workAuthors"
@@ -87,7 +87,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/workFandoms" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/workSummary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -112,6 +112,7 @@
             app:chipBackgroundColor="@color/backgroundColor"
             app:chipIcon="@drawable/ic_card_language_16"
             app:chipIconSize="16dp"
+            app:chipIconVisible="true"
             app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
@@ -121,6 +122,7 @@
             app:chipBackgroundColor="@color/backgroundColor"
             app:chipIcon="@drawable/ic_card_word_count_16"
             app:chipIconSize="16dp"
+            app:chipIconVisible="true"
             app:chipMinTouchTargetSize="0dp" />
 
         <com.google.android.material.chip.Chip
@@ -130,6 +132,7 @@
             app:chipBackgroundColor="@color/backgroundColor"
             app:chipIcon="@drawable/ic_card_chapters_16"
             app:chipIconSize="16dp"
+            app:chipIconVisible="true"
             app:chipMinTouchTargetSize="0dp" />
 
     </com.google.android.material.chip.ChipGroup>
