--- a/app/src/main/res/layout/local_work_list.xml
+++ b/app/src/main/res/layout/local_work_list.xml
@@ -30,6 +30,7 @@
 
                 <TextView
                     android:id="@+id/tagNameTextView"
+                    style="@style/ui_text_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
