Edit colors for night mode

--- a/app/src/main/res/layout/layout_work_blurb.xml
+++ b/app/src/main/res/layout/layout_work_blurb.xml
@@ -55,9 +55,10 @@
         android:layout_marginEnd="24dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:chipBackgroundColor="@color/backgroundColor"
+        app:chipBackgroundColor="@color/transparent"
         app:chipIcon="@drawable/ic_card_date_updated_16"
         app:chipIconSize="16dp"
+        app:chipIconVisible="true"
         app:chipMinTouchTargetSize="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/workTitle" />
@@ -174,7 +175,10 @@
             android:id="@+id/workLanguage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_language_16"
             app:chipIconEnabled="true"
             app:chipIconSize="16dp"
@@ -184,7 +188,10 @@
             android:id="@+id/workWordCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_word_count_16"
             app:chipIconEnabled="true"
             app:chipIconSize="16dp"
@@ -194,38 +201,11 @@
             android:id="@+id/workChapters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_chapters_16"
-            app:chipIconEnabled="true"
-            app:chipIconSize="16dp"
-            app:chipMinTouchTargetSize="0dp" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/workKudos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
-            app:chipIcon="@drawable/ic_card_kudos_16"
-            app:chipIconEnabled="true"
-            app:chipIconSize="16dp"
-            app:chipMinTouchTargetSize="0dp" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/workComments"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
-            app:chipIcon="@drawable/ic_card_comments_16"
-            app:chipIconEnabled="true"
-            app:chipIconSize="16dp"
-            app:chipMinTouchTargetSize="0dp" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/workBookmarks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
-            app:chipIcon="@drawable/ic_card_bookmarks_16"
             app:chipIconEnabled="true"
             app:chipIconSize="16dp"
             app:chipMinTouchTargetSize="0dp" />
@@ -234,11 +214,54 @@
             android:id="@+id/workHits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_hits_16"
             app:chipIconEnabled="true"
             app:chipIconSize="16dp"
             app:chipMinTouchTargetSize="0dp" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/workComments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
+            app:chipIcon="@drawable/ic_card_comments_16"
+            app:chipIconEnabled="true"
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/workKudos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
+            app:chipIcon="@drawable/ic_card_kudos_16"
+            app:chipIconEnabled="true"
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/workBookmarks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="false"
+            android:elevation="0dp"
+            android:textIsSelectable="false"
+            app:chipBackgroundColor="@color/transparent"
+            app:chipIcon="@drawable/ic_card_bookmarks_16"
+            app:chipIconEnabled="true"
+            app:chipIconSize="16dp"
+            app:chipMinTouchTargetSize="0dp" />
+
     </com.google.android.material.chip.ChipGroup>
 
     <View
