--- a/app/src/main/res/layout/layout_work_blurb_compact.xml
+++ b/app/src/main/res/layout/layout_work_blurb_compact.xml
@@ -109,7 +109,9 @@
             android:id="@+id/workLanguage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_language_16"
             app:chipIconSize="16dp"
             app:chipIconVisible="true"
@@ -119,7 +121,9 @@
             android:id="@+id/workWordCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_word_count_16"
             app:chipIconSize="16dp"
             app:chipIconVisible="true"
@@ -129,7 +133,9 @@
             android:id="@+id/workChapters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@color/backgroundColor"
+            android:checkable="false"
+            android:elevation="0dp"
+            app:chipBackgroundColor="@color/transparent"
             app:chipIcon="@drawable/ic_card_chapters_16"
             app:chipIconSize="16dp"
             app:chipIconVisible="true"
