--- a/app/src/main/res/navigation/read.xml
+++ b/app/src/main/res/navigation/read.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/readingListFragment"
         android:name="org.eidos.reader.ui.read.readinglist.ReadingListFragment"
-        android:label="Read"
+        android:label="Reading List"
         tools:layout="@layout/local_work_list" />
 
     <include app:graph="@navigation/work" />
