--- a/app/src/main/res/navigation/library.xml
+++ b/app/src/main/res/navigation/library.xml
@@ -9,7 +9,7 @@
         android:id="@+id/libraryFragment"
         android:name="org.eidos.reader.ui.library.LibraryFragment"
         android:label="Library"
-        tools:layout="@layout/local_work_list"/>
+        tools:layout="@layout/local_work_list" />
 
     <include app:graph="@navigation/work" />
 
@@ -21,8 +21,8 @@
             app:argType="org.eidos.reader.model.domain.WorkBlurb" />
         <argument
             android:name="isStoredInDatabase"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
     </action>
 
 
