--- a/app/src/main/res/navigation/work_list.xml
+++ b/app/src/main/res/navigation/work_list.xml
@@ -19,7 +19,7 @@
     <fragment
         android:id="@+id/workListFragment"
         android:name="org.eidos.reader.ui.browse.worklist.WorkListFragment"
-        android:label="fragment_work_list" >
+        android:label="Works">
 
         <argument
             android:name="tagName"
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/workListFilterFragment"
         android:name="org.eidos.reader.ui.browse.worklistfilter.WorkListFilterFragment"
-        android:label="Filter Options" >
+        android:label="Filter Options">
         <argument
             android:name="workFilterChoices"
             app:argType="org.eidos.reader.remote.choices.WorkFilterChoices" />
@@ -47,8 +47,8 @@
             app:argType="org.eidos.reader.model.domain.WorkBlurb" />
         <argument
             android:name="isStoredInDatabase"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
     </action>
 
 
